--- a/localization/bul/blights.json
+++ b/localization/bul/blights.json
@@ -1,98 +1,98 @@
 {
-  "Accursed": {
-    "NAME": "Проклятый",
-    "DESCRIPTION": [
-      "Вы получаете #b",
-      " случайных #yПроклятий, побеждая босса.",
-      ""
-    ]
-  },
-  "BlightedDurian": {
-    "NAME": "Чумной Дуриан",
-    "DESCRIPTION": [
-      "Отнимает #b",
-      "% от Макс. ОЗ."
-    ]
-  },
   "DeadlyEnemies": {
-    "NAME": "Могущество Шпиля",
+    "NAME": "Spear of Blight",
     "DESCRIPTION": [
-      "Враги наносят на #b",
-      "% больше урона."
-    ]
-  },
-  "FullBelly": {
-    "NAME": "Намордник",
-    "DESCRIPTION": [
-      "Вы не можете увеличивать Макс. ОЗ. Восполняемое здоровье уменьшается в 2 раза."
-    ]
-  },
-  "GraspOfShadows": {
-    "NAME": "Явление духов",
-    "DESCRIPTION": [
-      "Враги начинают бой с #b",
-      " #yНеосязаемости."
-    ]
-  },
-  "GrotesqueTrophy": {
-    "NAME": "Гротескный трофей",
-    "DESCRIPTION": [
-      "При получении даёт #b",
-      " карт #rГордыня.",
-      "Ваша гордыня обрела порочный облик..."
-    ]
-  },
-  "MetallicRebirth": {
-    "NAME": "Аугментация Древних",
-    "DESCRIPTION": [
-      "Враги начинают бой с #b",
-      " #yАртефакта, #b",
-      " #yПанциря и способностью #b",
-      " #yРегенерировать."
-    ]
-  },
-  "MimicInfestation": {
-    "NAME": "Нашествие мимиков",
-    "DESCRIPTION": [
-      "В последующих актах комнаты с сокровищами заменены на элитных врагов. Победа над элитными врагами больше не даёт реликвий."
-    ]
-  },
-  "Scatterbrain": {
-    "NAME": "Растяпа",
-    "DESCRIPTION": [
-      "Вы берёте на #b ",
-      " карту меньше в начале своего хода.",
-      ""
-    ]
-  },
-  "TimeMaze": {
-    "NAME": "Лабиринт времени",
-    "DESCRIPTION": [
-      "Вы можете разыграть только #b ",
-      " карт за ход.",
-      "Я могу разыграть только NL #r"
+      "Enemies deal #b",
+      "% more damage."
     ]
   },
   "ToughEnemies": {
-    "NAME": "Покров Шпиля",
+    "NAME": "Shield of Blight",
     "DESCRIPTION": [
-      "У врагов на #b",
-      "% больше ОЗ."
+      "Enemies have #b",
+      "% more HP."
+    ]
+  },
+  "TimeMaze": {
+    "NAME": "Time Maze",
+    "DESCRIPTION": [
+      "You cannot play more than #b",
+      " cards per turn.",
+      "I can only play up to NL #r"
     ]
   },
   "TwistingMind": {
-    "NAME": "Искажение сознания",
+    "NAME": "Twisting Mind",
     "DESCRIPTION": [
-      "Добавляет #b",
-      " случайный Статус на верх стопки добора в конце вашего хода.",
+      "At the end of your turn, add #b",
+      " random Status card to the top of your draw pile.",
       ""
     ]
   },
-  "VoidEssence": {
-    "NAME": "Эссенция бездны",
+  "Accursed": {
+    "NAME": "Accursed",
     "DESCRIPTION": [
-      "Вы получаете на #b",
-      " [E] меньше в начале каждого хода."
+      "Whenever you defeat a Boss, obtain #b",
+      " random #yCurses.",
+      ""
+    ]
+  },
+  "Scatterbrain": {
+    "NAME": "Scatterbrain",
+    "DESCRIPTION": [
+      "Draw #b",
+      " less card a turn.",
+      ""
+    ]
+  },
+  "MimicInfestation": {
+    "NAME": "Mimic Infestation",
+    "DESCRIPTION": [
+      "Treasure rooms in future acts are replaced by Elites. Elites no longer drop relics."
+    ]
+  },
+  "FullBelly": {
+    "NAME": "Muzzle",
+    "DESCRIPTION": [
+      "You can no longer increase your Max HP. All healing is halved."
+    ]
+  },
+  "GrotesqueTrophy": {
+    "NAME": "Grotesque Trophy",
+    "DESCRIPTION": [
+      "Upon pickup, obtain #b",
+      " #rPrides.",
+      "Your Pride is twisted..."
+    ]
+  },
+  "BlightedDurian": {
+    "NAME": "Post-Durian",
+    "DESCRIPTION": [
+      "Lose #b",
+      "% of your Max HP."
+    ]
+  },
+  "VoidEssence": {
+    "NAME": "Void Essence",
+    "DESCRIPTION": [
+      "Gain #b",
+      " less [E] at the start of each turn."
+    ]
+  },
+  "GraspOfShadows": {
+    "NAME": "Hauntings",
+    "DESCRIPTION": [
+      "Enemies start combat with #b",
+      " #yIntangible."
+    ]
+  },
+  "MetallicRebirth": {
+    "NAME": "Ancient Augmentation",
+    "DESCRIPTION": [
+      "Enemies start combat with #b",
+      " #yArtifact, #b",
+      " #yPlated #yArmor, and #b",
+      " #yRegenerate."
     ]
   }
 }
