--- a/localization/bul/score_bonuses.json
+++ b/localization/bul/score_bonuses.json
@@ -1,180 +1,180 @@
 {
   "Alchemist": {
-    "NAME": "Алхимик",
+    "NAME": "Alchemist",
     "DESCRIPTIONS": [
-      "Купить 5 зелий."
+      "Bought 5 potions."
     ]
   },
   "Ascension": {
-    "NAME": "Возвышение",
+    "NAME": "Ascension",
     "DESCRIPTIONS": [
-      "Бонус +5% за каждый уровень «Возвышения»."
+      "+5% score per Ascension Level."
     ]
   },
   "Beyond Elites Killed": {
-    "NAME": "Убито элиты в Запределье",
+    "NAME": "Beyond Elites Killed",
     "DESCRIPTIONS": []
   },
   "Beyond Perfect": {
-    "NAME": "Идеально",
+    "NAME": "Beyond Perfect",
     "DESCRIPTIONS": [
-      "Победить 3 боссов, не получив урона."
+      "Defeat 3 bosses without taking damage."
     ]
   },
   "Bosses Slain": {
-    "NAME": "Убито боссов",
+    "NAME": "Bosses Slain",
     "DESCRIPTIONS": []
   },
   "Champion": {
-    "NAME": "Чемпион",
+    "NAME": "Champion",
     "DESCRIPTIONS": [
-      "Победить элитного врага, не получив урона."
+      "Defeat an Elite without taking damage."
     ]
   },
   "Cheater": {
-    "NAME": "Читер",
+    "NAME": "Cheater",
     "DESCRIPTIONS": [
-      "Пойман за читерством. Если такое случится дважды, ваша статистика больше никогда не попадёт в Таблицу лидеров."
+      "Caught cheating. If caught twice, your score will never upload to the Leaderboards."
     ]
   },
   "City Elites Killed": {
-    "NAME": "Убито элиты в Городе",
+    "NAME": "City Elites Killed",
     "DESCRIPTIONS": []
   },
   "Collector": {
-    "NAME": "Коллекционер",
+    "NAME": "Collector",
     "DESCRIPTIONS": [
-      "Иметь 4 копии любой карты (не считая карт с начала игры)."
+      "Have 4 copies of any non-starter card."
     ]
   },
   "Combo": {
-    "NAME": "К-к-к-комбо",
+    "NAME": "C-c-c-combo",
     "DESCRIPTIONS": [
-      "Разыграть 20 карт в одном ходу."
+      "Play 20 cards in a single turn."
     ]
   },
   "Curses": {
-    "NAME": "Проклятье!",
+    "NAME": "Curses!",
     "DESCRIPTIONS": [
-      "Колода содержит не менее 5 проклятий."
+      "Your deck contains 5 curses."
     ]
   },
   "Encyclopedian": {
-    "NAME": "Энциклопедия",
+    "NAME": "Encyclopedian",
     "DESCRIPTIONS": [
-      "Колода содержит не менее 50 карт."
+      "Deck size of at least 50 cards."
     ]
   },
   "Exordium Elites Killed": {
-    "NAME": "Убито элиты в Преддверье",
+    "NAME": "Exordium Elites Killed",
     "DESCRIPTIONS": []
   },
   "Heartbreaker": {
-    "NAME": "Сердцеед",
+    "NAME": "Heartbreaker",
     "DESCRIPTIONS": [
-      "Победите Сердце Шпиля."
+      "Defeat the Heart."
     ]
   },
   "Highlander": {
-    "NAME": "Горец",
+    "NAME": "Highlander",
     "DESCRIPTIONS": [
-      "В колоде нет одинаковых карт (не считая карт с начала игры)."
+      "Your deck contains no duplicates (excluding starter cards)."
     ]
   },
   "I Like Gold": {
-    "NAME": "Люблю золото",
+    "NAME": "I Like Gold",
     "DESCRIPTIONS": [
-      "Накопить 3,000 золота."
+      "Accrued 3,000 gold."
     ]
   },
   "Librarian": {
-    "NAME": "Библиотекарь",
+    "NAME": "Librarian",
     "DESCRIPTIONS": [
-      "Колода содержит не менее 35 карт."
+      "Deck size of at least 35 cards."
     ]
   },
   "Light Speed": {
-    "NAME": "Скорость света",
+    "NAME": "Light Speed",
     "DESCRIPTIONS": [
-      "Победить менее, чем за 45 минут."
+      "Victory in under 45 minutes."
     ]
   },
   "Minimalist": {
-    "NAME": "Минималист",
+    "NAME": "Minimalist",
     "DESCRIPTIONS": [
-      "Убрать 5+ карт из колоды."
+      "Removed 5+ cards from your deck."
     ]
   },
   "Money Money": {
-    "NAME": "Денежки",
+    "NAME": "Money Money",
     "DESCRIPTIONS": [
-      "Накопить 1,000 золота."
+      "Accrued 1,000 gold."
     ]
   },
   "Mystery Machine": {
-    "NAME": "Хочу всё знать",
+    "NAME": "Mystery Machine",
     "DESCRIPTIONS": [
-      "Посетить 15+ ?-комнат."
+      "Traveled to 15+ ? rooms."
     ]
   },
   "On My Own Terms": {
-    "NAME": "Будь по-моему",
+    "NAME": "On My Own Terms",
     "DESCRIPTIONS": [
-      "Убить себя."
+      "Killed yourself."
     ]
   },
   "Overkill": {
-    "NAME": "Чересчур",
+    "NAME": "Overkill",
     "DESCRIPTIONS": [
-      "Нанести 99 урона одной атакой."
+      "Deal 99 damage with a single attack."
     ]
   },
   "Pauper": {
-    "NAME": "Бедняк",
+    "NAME": "Pauper",
     "DESCRIPTIONS": [
-      "Иметь 0 редких карт."
+      "Have 0 rare cards."
     ]
   },
   "Perfect": {
-    "NAME": "Безупречно",
+    "NAME": "Perfect",
     "DESCRIPTIONS": [
-      "Победить босса, не получив урона."
+      "Defeat a Boss without taking damage."
     ]
   },
   "Poopy": {
-    "NAME": "Грязные делишки",
+    "NAME": "Poopy",
     "DESCRIPTIONS": [
-      "Получить Испражнения духов."
+      "Received the Spirit Poop."
     ]
   },
   "Raining Money": {
-    "NAME": "Денежный дождь",
+    "NAME": "Raining Money",
     "DESCRIPTIONS": [
-      "Накопить 2,000 золота."
+      "Accrued 2,000 gold."
     ]
   },
   "Shiny": {
-    "NAME": "Блестяшки",
+    "NAME": "I Like Shiny",
     "DESCRIPTIONS": [
-      "Иметь 25+ реликвий."
+      "Have 25+ relics."
     ]
   },
   "Speedster": {
-    "NAME": "Гонщик",
+    "NAME": "Speedster",
     "DESCRIPTIONS": [
-      "Победить менее, чем за 60 минут."
+      "Victory in under 60 minutes."
     ]
   },
   "Stuffed": {
-    "NAME": "Пережор",
+    "NAME": "Stuffed",
     "DESCRIPTIONS": [
-      "Повысить Макс. ОЗ на 30+."
+      "Increased your Max HP by 30+."
     ]
   },
   "Well Fed": {
-    "NAME": "Сытость",
+    "NAME": "Well Fed",
     "DESCRIPTIONS": [
-      "Повысить Макс. ОЗ на 15+."
+      "Increased your Max HP by 15+."
     ]
   }
 }
