--- a/localization/bul/stances.json
+++ b/localization/bul/stances.json
@@ -6,21 +6,21 @@
     ]
   },
   "Wrath": {
-    "NAME": "Гнев",
+    "NAME": "Wrath",
     "DESCRIPTION": [
-      "Ваши Атаки наносят удвоенный урон, но и вы получаете удвоенный урон от атак."
+      "Your Attacks deal double damage and you take double damage from attacks."
     ]
   },
   "Calm": {
-    "NAME": "Спокойствие",
+    "NAME": "Calm",
     "DESCRIPTION": [
-      "Вы получаете [W] [W] при выходе из этой #yСтойки."
+      "Upon exiting this #yStance, gain [W] [W] ."
     ]
   },
   "Divinity": {
-    "NAME": "Божественность",
+    "NAME": "Divinity",
     "DESCRIPTION": [
-      "Вы получаете [W] [W] [W] при входе в эту #yСтойку. Ваши Атаки наносят утроенный урон. Вы выйдете из этой #yСтойки в начале вашего след. хода."
+      "Upon entering this #yStance, gain [W] [W] [W] . Attacks deal triple damage. Exit this #yStance at the start of your next turn."
     ]
   }
 }
